Bug 434978 Addressbook view not updated when a new card is created while creating a new mailing list. p=Siva,r=me,sr=Neil