mailnews/import/oexpress/nsOEAddressIterator.cpp
@@ -239,7 +239,8 @@ nsresult nsOEAddressIterator::EnumList( const PRUnichar * pName, LPENTRYID pEid,
             m_database->InitCardFromRow(userCard,cardRow);
 
             m_database->AddListCardColumnsToRow(userCard, listRow, ++numListElems,
-                                        getter_AddRefs(newCard),PR_TRUE, nsnull);
+                                                getter_AddRefs(newCard),
+                                                PR_TRUE, nsnull, nsnull);
           }
     m_pWab->FreeProperty( pProp);
           m_pWab->ReleaseUser( pUser);
