mailnews/import/outlook/src/nsOutlookMail.cpp
@@ -1089,8 +1089,8 @@ nsresult nsOutlookMail::CreateList( const PRUnichar * pName,
 
         //add card list
         pDb->AddListCardColumnsToRow(userCard,
-          newListRow,idx+1,
-          getter_AddRefs(newCard),PR_TRUE, nsnull);
+                                     newListRow,idx+1, getter_AddRefs(newCard),
+                                     PR_TRUE, nsnull, nsnull);
 
 
       }
